--- a/formShelter.html
+++ b/formShelter.html
@@ -39,7 +39,7 @@
         <div class="shelter-form">
             <h1 class="title josefinsans-normal-black-30px text-center py-5">Completa el perfil <br />de tu refugio</h1>
             <div class="d-flex justify-content-center align-content-center align-items-center">
-                <form action="" method="">
+                <form action="" method="" id="form-shelter">
                     <div class="base-form d-flex flex-column justify-content-center">
                         <label for="inputNameShelter"
                             class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo se llama tu
@@ -72,7 +72,7 @@
                         </label>
                         <input type="tel"
                             class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Teléfono">
+                            placeholder="Teléfono" id="phone">
                     </div>
                     <br>
                     <div class="base-form d-flex flex-column justify-content-center">
@@ -210,6 +210,7 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
     <script src="js/main.js"></script>
+    <script src="js/formShelter.js"></script>
 </body>
 
 </html>
