--- a/homeShelter.html
+++ b/homeShelter.html
@@ -316,7 +316,7 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
     <script src="js/main.js"></script>
-    <script src="js/profileShelter.js"></script>
+    <script src="js/homeShelter.js"></script>
 </body>
 
 </html>
