--- a/profileShelter.html
+++ b/profileShelter.html
@@ -66,7 +66,10 @@
                                 <p class="story_shelter"></p>
                             </div>
                         </div>
-                        <div class="user-actions d-flex justify-content-center pt-5">
+                        <div class="user-actions d-flex justify-content-evenly flex-row pt-5 ">
+                            <a href="petsListPerShelter.html">
+                                <button class="button-secondary">Ver mascotas</button>
+                            </a>
                             <form action="https://www.paypal.com/donate" method="post" target="_top"
                                 class="button-donation">
                                 <input type="hidden" name="business" value="princessna11@hotmail.com" />
