--- a/petsListPerShelter.html
+++ b/petsListPerShelter.html
@@ -64,9 +64,9 @@
 
     <main>
         <div class="top">
-            <div class="background-orange">
+            <div class="background-orange text-center">
+                <h1 class="josefinsans-normal-white-30px title-shelter">Mascotas de Refugio San Gregorio</h1>
             </div>
-            <h1 class="josefinsans-normal-white-30px">Mascotas de Refugio San Gregorio</h1>
         </div>
         <div class="search-pet d-flex flex-wrap pt-1">
             <div class="card" style="width: 20rem;">
