--- a/signUpUser.html
+++ b/signUpUser.html
@@ -28,7 +28,15 @@
                 <li>
                     <input type="name"
                     class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                    placeholder="Nombre" id="name">
+                    placeholder="Nombre de usuario" id="username">
+                    <br>
+                    <input type="name"
+                    class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                    placeholder="Nombre" id="first_name">
+                    <br>
+                    <input type="name"
+                    class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                    placeholder="Apellido" id="last_name">
                     <br>
                     <input type="email"
                         class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
