--- a/logInUser.html
+++ b/logInUser.html
@@ -25,6 +25,10 @@
         <form action="" method="" class="group-form" id="login-form">
             <ul class="d-flex align-content-center flex-column align-items-center justify-content-center">
                 <li>
+                    <input type="username"
+                    class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                    placeholder="Nombre" id="username">
+                    <br>
                     <input type="email"
                         class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
                         placeholder="Correo" id="email">
