Update shelter login,signup, image

--- a/logInShelter.html
+++ b/logInShelter.html
@@ -22,12 +22,12 @@
     </header>
 
     <main>
-        <form action="" method="" class="group-form" id="login-form">
+        <form action="" method="" class="group-form" id="login-shelter-form">
             <ul class="d-flex align-content-center flex-column align-items-center justify-content-center">
                 <li>
-                    <input type="email"
+                    <input type="text"
                         class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Correo" id="email">
+                        placeholder="Username" id="username">
                     <br>
                     <input type="password"
                         class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
