--- a/signUpShelter.html
+++ b/signUpShelter.html
@@ -28,7 +28,7 @@
                 <li>
                     <input type="organization"
                     class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                    placeholder="Nombre del refugio" id="name">
+                    placeholder="Nombre del refugio" id="username">
                     <br>
                     <input type="email"
                         class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
