--- a/formUser.html
+++ b/formUser.html
@@ -115,6 +115,16 @@
                             class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue" id="story">
                     </div>
                     <br>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputDescription"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Sube una foto 
+                          
+                        </label>
+                        <input type="file"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue" id="image">
+                    </div>
+                    <br>
                     <div>
                         <div class="d-flex flex-row align-items-center">
                             <input type="checkbox" class="" id="checkbox-form">
