--- a/detailPet.html
+++ b/detailPet.html
@@ -123,15 +123,15 @@
                                 <button class="button-main">Adoptar</button>
                             </a>
                         </div>
-                        <div class="info-shelter py-5 d-flex flex-column">
+                        <div class="info-shelter py-5 d-flex flex-column shelter-button">
                             <p class="px-4 josefinsans-chetwode-blue-18px">
                                 REFUGIO
                             </p>
-                            <a href="profileShelter.html" class="d-inline-flex container flex-row">
+                            <a href="profileShelter.html?association_id" class="d-inline-flex container flex-row ">
                                 <img src="assets/img/shelterImage.jpg" alt=""
                                     style="width: 6em; height: 6em;">
                                 <div class="col-12 text-shelter">
-                                    <p>Refugio San Gregorio</p>
+                                    <p class= "shelter-name"></p>
                                     <p class="d-flex flex-wrap">Felipe Carrillo puerto #400, Alberto Zamora, <br> Coyoacán, 04000, CDMX.</p>
                                 </div>
                             </a>
