--- a/detailPet.html
+++ b/detailPet.html
@@ -110,7 +110,7 @@
                         <div class="user-actions d-inline-flex flex-row justify-content-evenly">
                             <form action="https://www.paypal.com/donate" method="post" target="_top"
                                 class="button-donation">
-                                <input type="hidden" name="business" value="princessna11@hotmail.com" />
+                                <input type="hidden" name="business" value="paw.chontli@gmail.com" />
                                 <input type="hidden" name="item_name" value="Pawchontli" />
                                 <input type="hidden" name="currency_code" value="MXN" />
                                 <input type="image" src="assets/svg/button-sponsor.svg" border="0" name="submit style"
