--- a/profileShelter.html
+++ b/profileShelter.html
@@ -72,11 +72,9 @@
                                 <button class="button-secondary">Ver mascotas</button>
                             </a>
                             <a href="" id="donation-link" target="_blank" > 
-                                <button class="button-primary button-donation">Donar</button>
-                            </a>
-                            <!-- <form action="https://www.paypal.com/donate" method="post" target="_blank"
+                                <form action="https://www.paypal.com/donate" method="post" target="_blank"
                                 class="button-donation">
-                                <input type="hidden" name="business" value="princessna11@hotmail.com" />
+                                <input type="hidden" name="business" value="paw.chontli@gmail.com" />
                                 <input type="hidden" name="item_name" value="Pawchontli" />
                                 <input type="hidden" name="currency_code" value="MXN" />
                                 <input type="image" src="assets/svg/button-donation-shelter.svg" border="0" name="submit style"
@@ -84,7 +82,8 @@
                                     alt="Donate with PayPal button" style="width: 10em;" />
                                 <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1"
                                     height="1" />
-                            </form> -->
+                            </form>
+                            </a>
                         </div>
                     </div>
                 </div>
