--- a/detailPet.html
+++ b/detailPet.html
@@ -25,9 +25,6 @@
                 </a>
             </div>
             <div>
-                <a href="favouritePet.html">
-                    <img src="assets/svg/heart.svg" class="heart" alt="" style="width: 2em;">
-                </a>
                 <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
@@ -152,10 +149,7 @@
         <div class="block-footer d-flex flex-wrap pb-4 justify-content-around">
             <ul>
                 <li>
-                    <a href="">Acerca</a>
-                </li>
-                <li>
-                    <a href="">Refugios</a>
+                    <a href="about.html">Acerca</a>
                 </li>
                 <li>
                     <a href="">Condiciones de uso</a>
@@ -166,28 +160,22 @@
             </ul>
             <ul>
                 <li>
-                    <a href="">Partners</a>
+                    <a href="">paw.chontli@gmail.com</a>
                 </li>
                 <li>
-                    <a href="">Soporte</a>
-                </li>
-                <li>
-                    <a href="">Mapa del sitio</a>
+                    <a href="">55-12-32-34-14</a>
                 </li>
             </ul>
         </div>
 
         <div class="icons-footer d-flex justify-content-evenly">
-            <a href="" role="button">
+            <a href="https://www.facebook.com/Pawchontli-100149705588791" role="button">
                 <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
             </a>
-            <a href="" role="button">
-                <img src="/assets/svg/twitter.svg" alt="" style="height: 2.5em; width: 2.5em;">
-            </a>
-            <a href="" role="button">
+            <a href="https://www.instagram.com/pawchontli/" role="button">
                 <img src="/assets/svg/instagram.svg" alt="" style="height: 2.5em; width: 2.5em;">
             </a>
-            <a href="">
+            <a href="https://github.com/xrlie/pawchontli_backend">
                 <img src="/assets/svg/git.svg" alt="" style="height: 3em; width: 3em;">
             </a>
         </div>
