--- a/formShelter.html
+++ b/formShelter.html
@@ -135,11 +135,10 @@
                     <br>
                     <div class="base-form d-flex flex-column justify-content-center">
                         <label for="inputDescription"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Sube el logo de tu refugio
-                          
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Sube el logo de tu refugio.
                         </label>
                         <input type="file"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue" id="image">
+                            class="input-picture josefinsans-normal-chetwode-blue-16px" id="image" type="file" accept="image/*">
                     </div>
                     <br>
                     <div>
