--- a/about.html
+++ b/about.html
@@ -12,22 +12,19 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Quicksand:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <title>Pawchontli 🐶🐱 || Ver el perfil  de mi refugio </title>
+    <title>Pawchontli 🐶🐱</title>
 </head>
 
 <body>
     <header>
         <div class="nav-bar d-flex flex-row align-items-center justify-content-between px-3">
             <div>
-                <a href="homeShelter.html">
+                <a href="index.html">
                     <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="" style="width: 5em;">
                 </a>
             </div>
             <div>
-                <a href="adoptionRequestsListShelter.html">
-                    <img src="assets/svg/clipboard.svg" class="clipboard" alt="" style="width: 2em;">
-                </a>
-                <button>
+                <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
             </div>
@@ -40,70 +37,27 @@
         </button>
         <ul class="container-inner-menu">
             <li>
-                <a href="homeShelter.html">
-                    Inicio
+                <a href="signUpUser.html">
+                    Registrarme
                 </a>
             </li>
             <li>
-                <a href="profileShelterEdit.html">
-                    Perfil
-                </a>
-            </li>
-            <li>
-                <a href="adoptionRequestsListShelter.html">
-                    Solicitudes
-                </a>
-            </li>
-            <li>
-                <a href="index.html">
-                    Cerrar sesión
+                <a href="logInUser.html">
+                    Ingresar
                 </a>
             </li>
         </ul>
     </nav>
 
     <main>
-        <div class="detail-shelter">
-            <div class="detail-top pt-1">
-            </div>
-            <div class="shelter-text rectangle-background">
-                <div class="detail-top pt-1">
-                    <img src="assets/img/shelterImage.jpg" alt="" class="shelter-image" style="width: 15em;">
-                </div>
-                <div class="info-shelter d-flex flex-column">
-                    <h2 class="josefinsans-normal-black-30px d-flex justify-content-center">Refugio San Gregorio</h2>
-                    <a href="updateShelter.html">                    
-                        <img src="assets/svg/edit.svg" alt="" class="edit pb-4"  style="width: 2em;">
-                    </a>
-                    <div class="d-flex flex-column">
-                        <div class="main-info d-flex flex-wrap justify-content-between px-5">
-                            <div class="location">
-                                <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
-                                <p>Felipe Carrillo puerto #400, Alberto Zamora, Coyoacán, 04000, CDMX.</p>
-                            </div>
-                            <div class="phone">
-                                <p class="josefinsans-chetwode-blue-18px">TELÉFONO</p>
-                                <p>5523423453</p>
-                            </div>
-                            <div class="web">
-                                <p class="josefinsans-chetwode-blue-18px">WEB</p>
-                                <a href="https://refugiosangregorio.com">
-                                    <p>www.refugiosangregorio.com</p>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="secondary-info d-flex flex-wrap justify-content-center px-5">
-                            <div>
-                                <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
-                                <p>Somos un refugio que sobrevive de donativos y ayuda de almas caritativas.
-                                    Amplios jardines, paseos, atención individualizada, cariño y supervisión continua para tu todos ellos.
-                                    Cuidamos a más de 200 perros y constantemente rescatamos a más.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div>
+            <h1>
+                Acerca
+            </h1>
         </div>
+        <p>
+
+        </p>
     </main>
 
     <footer text-center>
@@ -151,13 +105,13 @@
         </div>
     </footer>
 
+    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
-    </script>
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
-
 </body>
 
 </html>
