--- a/createPet.html
+++ b/createPet.html
@@ -145,6 +145,14 @@
                     <input type="text"
                         class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue" id="special-needs">
                     </div>
+                    <br>
+                    <div>
+                        <label for="inputDescription"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Sube una foto de la mascota.
+                    </label>
+                    <input type="file"
+                        class="input-picture josefinsans-normal-chetwode-blue-16px" id="image" type="file" accept="image/*">
+                    </div>
                     <div class="d-flex justify-content-center pt-5">
                         <input type="submit" value="Agregar mascota" class="button-p josefinsans-normal-white-20px ">
                     </div>
@@ -163,10 +171,7 @@
         <div class="block-footer d-flex flex-wrap pb-4 justify-content-around">
             <ul>
                 <li>
-                    <a href="">Acerca</a>
-                </li>
-                <li>
-                    <a href="">Refugios</a>
+                    <a href="about.html">Acerca</a>
                 </li>
                 <li>
                     <a href="">Condiciones de uso</a>
@@ -177,28 +182,22 @@
             </ul>
             <ul>
                 <li>
-                    <a href="">Partners</a>
+                    <a href="">paw.chontli@gmail.com</a>
                 </li>
                 <li>
-                    <a href="">Soporte</a>
-                </li>
-                <li>
-                    <a href="">Mapa del sitio</a>
+                    <a href="">55-12-32-34-14</a>
                 </li>
             </ul>
         </div>
 
         <div class="icons-footer d-flex justify-content-evenly">
-            <a href="" role="button">
+            <a href="https://www.facebook.com/Pawchontli-100149705588791" role="button">
                 <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
             </a>
-            <a href="" role="button">
-                <img src="/assets/svg/twitter.svg" alt="" style="height: 2.5em; width: 2.5em;">
-            </a>
-            <a href="" role="button">
+            <a href="https://www.instagram.com/pawchontli/" role="button">
                 <img src="/assets/svg/instagram.svg" alt="" style="height: 2.5em; width: 2.5em;">
             </a>
-            <a href="">
+            <a href="https://github.com/xrlie/pawchontli_backend">
                 <img src="/assets/svg/git.svg" alt="" style="height: 3em; width: 3em;">
             </a>
         </div>
