--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
                 </a>
             </div>
             <div>
-                <a href="favouritePet.html">
-                    <img src="assets/svg/heart.svg" class="heart" alt="" style="width: 2em;">
-                </a>
                 <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
@@ -47,23 +44,13 @@
         </button>
         <ul class="container-inner-menu">
             <li>
-                <a href="index.html">
-                    Inicio
+                <a href="signUpUser.html">
+                    Registrarme
                 </a>
             </li>
             <li>
-                <a href="profileUserEdit.html">
-                    Perfil
-                </a>
-            </li>
-            <li>
-                <a href="adoptionRequestsListUser.html">
-                    Solicitudes
-                </a>
-            </li>
-            <li>
-                <a href="index.html">
-                    Cerrar sesión
+                <a href="logInUser.html">
+                    Ingresar
                 </a>
             </li>
         </ul>
@@ -100,11 +87,6 @@
             </h1>
             <div class="owl-carousel owl-theme mx-5">
                 <div class="card" style="width: 20rem;">
-                    <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
-                        <path
-                            d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
-                        </path>
-                    </svg>
                     <a href="">
                         <img class="card-img-top" src="assets/img/perro_6.jpg" alt="Pet">
                     </a>
@@ -115,11 +97,6 @@
                     </div>
                 </div>
                 <div class="card" style="width: 20rem;">
-                    <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
-                        <path
-                            d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
-                        </path>
-                    </svg>
                     <a href="">
                         <img class="card-img-top" src="assets/img/perro_4.jpg" alt="Pet">
                     </a>
@@ -130,11 +107,6 @@
                     </div>
                 </div>
                 <div class="card" style="width: 20rem;">
-                    <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
-                        <path
-                            d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
-                        </path>
-                    </svg>
                     <a href="">
                         <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
                     </a>
@@ -145,11 +117,6 @@
                     </div>
                 </div>
                 <div class="card" style="width: 20rem;">
-                    <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
-                        <path
-                            d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
-                        </path>
-                    </svg>
                     <a href="">
                         <img class="card-img-top" src="assets/img/gato_8.jpg" alt="Pet">
                     </a>
@@ -160,11 +127,6 @@
                     </div>
                 </div>
                 <div class="card" style="width: 20rem;">
-                    <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
-                        <path
-                            d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
-                        </path>
-                    </svg>
                     <a href="">
                         <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
                     </a>
@@ -175,11 +137,6 @@
                     </div>
                 </div>
                 <div class="card" style="width: 20rem;">
-                    <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
-                        <path
-                            d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
-                        </path>
-                    </svg>
                     <a href="">
                         <img class="card-img-top" src="assets/img/perro_9.jpg" alt="Pet">
                     </a>
@@ -210,11 +167,13 @@
                     Los refugios necesitan tu ayuda
                 </h1>
                 <p class="quicksand-regular-white-20px">
-                    Consequat velit qui adipisicing sunt do reprehenderit ad laborum tempor ullamco exercitation.
+                    La mayoría de los refugios sobreviven gracias a los donativos y ayuda de almas caritativas.
+                    <br>
+                    Con tu ayuda más y más perros y gatos comerán hoy.
                 </p>
                 <div>
                     <form action="https://www.paypal.com/donate" method="post" target="_top" class="button-donation">
-                        <input type="hidden" name="business" value="princessna11@hotmail.com" />
+                        <input type="hidden" name="business" value="paw.chonti@gmail.com" />
                         <input type="hidden" name="item_name" value="Pawchontli" />
                         <input type="hidden" name="currency_code" value="MXN" />
                         <input type="image" src="assets/svg/button-donation.svg" border="0" name="submit"
@@ -238,10 +197,7 @@
         <div class="block-footer d-flex flex-wrap pb-4 justify-content-around">
             <ul>
                 <li>
-                    <a href="">Acerca</a>
-                </li>
-                <li>
-                    <a href="">Refugios</a>
+                    <a href="about.html">Acerca</a>
                 </li>
                 <li>
                     <a href="">Condiciones de uso</a>
@@ -252,28 +208,22 @@
             </ul>
             <ul>
                 <li>
-                    <a href="">Partners</a>
+                    <a href="">paw.chontli@gmail.com</a>
                 </li>
                 <li>
-                    <a href="">Soporte</a>
-                </li>
-                <li>
-                    <a href="">Mapa del sitio</a>
+                    <a href="">55-12-32-34-14</a>
                 </li>
             </ul>
         </div>
 
         <div class="icons-footer d-flex justify-content-evenly">
-            <a href="" role="button">
+            <a href="https://www.facebook.com/Pawchontli-100149705588791" role="button">
                 <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
             </a>
-            <a href="" role="button">
-                <img src="/assets/svg/twitter.svg" alt="" style="height: 2.5em; width: 2.5em;">
-            </a>
-            <a href="" role="button">
+            <a href="https://www.instagram.com/pawchontli/" role="button">
                 <img src="/assets/svg/instagram.svg" alt="" style="height: 2.5em; width: 2.5em;">
             </a>
-            <a href="">
+            <a href="https://github.com/xrlie/pawchontli_backend">
                 <img src="/assets/svg/git.svg" alt="" style="height: 3em; width: 3em;">
             </a>
         </div>
