--- a/updatePet.html
+++ b/updatePet.html
@@ -139,28 +139,21 @@
                     <br>
                     <div class="base-form d-flex flex-column justify-content-center">
                         <label for="inputText8"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Requiere atención o
-                        cuidados especiales? ¿Cuáles?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Requiere atención
+                            o
+                            cuidados especiales? ¿Cuáles?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
                     </div>
+                    <br>
                     <div class="file-upload">
-                        <div class="image-upload-wrap">
-                            <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
-                            <div class="drag-text">
-                                <br>
-                                <img src="assets/svg/add.svg" alt="" style="height: 3em; width: 3em;">
-                                <h3 class="josefinsans-medium-chetwode-blue-14px">Añadir foto de la mascota</h3>
-                            </div>
-                        </div>
-                        <div class="file-upload-content">
-                            <img class="file-upload-image" src="#" alt="your image" />
-                            <div class="image-title-wrap">
-                                <button type="button" onclick="removeUpload()" class="remove-image">Borrar <span
-                                        class="image-title">Tu foto</span></button>
-                            </div>
-                        </div>
+                        <label for="inputDescription"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Cambiar la
+                            fotografía de la mascota.
+                        </label>
+                        <input type="file" class="input-picture josefinsans-normal-chetwode-blue-16px" id="image"
+                            type="file" accept="image/*">
                     </div>
                     <div class="d-flex justify-content-center pt-3">
                         <input type="submit" value="Actualizar" class="button-p josefinsans-normal-white-20px ">
@@ -169,6 +162,7 @@
             </div>
         </div>
     </main>
+
     <footer text-center>
         <div class="top-footer">
             <img onclick="topFunction()" id="myBtn" title="Go to top" src="assets/svg/arrow.svg" alt="" class="arrow">
@@ -179,10 +173,7 @@
         <div class="block-footer d-flex flex-wrap pb-4 justify-content-around">
             <ul>
                 <li>
-                    <a href="">Acerca</a>
-                </li>
-                <li>
-                    <a href="">Refugios</a>
+                    <a href="about.html">Acerca</a>
                 </li>
                 <li>
                     <a href="">Condiciones de uso</a>
@@ -193,28 +184,22 @@
             </ul>
             <ul>
                 <li>
-                    <a href="">Partners</a>
+                    <a href="">paw.chontli@gmail.com</a>
                 </li>
                 <li>
-                    <a href="">Soporte</a>
-                </li>
-                <li>
-                    <a href="">Mapa del sitio</a>
+                    <a href="">55-12-32-34-14</a>
                 </li>
             </ul>
         </div>
 
         <div class="icons-footer d-flex justify-content-evenly">
-            <a href="" role="button">
+            <a href="https://www.facebook.com/Pawchontli-100149705588791" role="button">
                 <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
             </a>
-            <a href="" role="button">
-                <img src="/assets/svg/twitter.svg" alt="" style="height: 2.5em; width: 2.5em;">
-            </a>
-            <a href="" role="button">
+            <a href="https://www.instagram.com/pawchontli/" role="button">
                 <img src="/assets/svg/instagram.svg" alt="" style="height: 2.5em; width: 2.5em;">
             </a>
-            <a href="">
+            <a href="https://github.com/xrlie/pawchontli_backend">
                 <img src="/assets/svg/git.svg" alt="" style="height: 3em; width: 3em;">
             </a>
         </div>
@@ -222,12 +207,12 @@
             <p class="quicksand-normal-white-10px">© 2021 Todos los derechos reservados.</p>
         </div>
     </footer>
-    
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
+    </script>
     <script src="js/main.js"></script>
 </body>
 
