--- a/updateShelter.html
+++ b/updateShelter.html
@@ -70,7 +70,8 @@
             </div>
         </div>
         <div class="shelter-form">
-            <h1 class="title josefinsans-normal-black-30px text-center py-5">Actualizar el perfil <br />de mi refugio</h1>
+            <h1 class="title josefinsans-normal-black-30px text-center py-5">Actualizar el perfil <br />de mi refugio
+            </h1>
             <div class="d-flex justify-content-center align-content-center align-items-center">
                 <form action="" method="">
                     <div class="base-form d-flex flex-column justify-content-center">
@@ -167,25 +168,17 @@
                     </div>
                     <br>
                     <div class="file-upload">
-                        <div class="image-upload-wrap">
-                            <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
-                            <div class="drag-text">
-                                <br>
-                                <img src="assets/svg/add.svg" alt="" style="height: 3em; width: 3em;">
-                                <h3 class="josefinsans-medium-chetwode-blue-14px">Añadir foto de mi refugio</h3>
-                            </div>
-                        </div>
-                        <div class="file-upload-content">
-                            <img class="file-upload-image" src="#" alt="your image" />
-                            <div class="image-title-wrap">
-                                <button type="button" onclick="removeUpload()" class="remove-image">Borrar <span
-                                        class="image-title">Tu foto</span></button>
-                            </div>
-                        </div>
+                        <label for="inputDescription"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Cambiar el logo de
+                            tu refugio.
+                        </label>
+                        <input type="file" class="input-picture josefinsans-normal-chetwode-blue-16px" id="image"
+                            type="file" accept="image/*">
                     </div>
                     <div>
                         <div class="d-flex justify-content-center">
-                            <input type="submit" value="Actualizar" class="button-p josefinsans-normal-white-20px button-primary">
+                            <input type="submit" value="Actualizar"
+                                class="button-p josefinsans-normal-white-20px button-primary">
                         </div>
                     </div>
                 </form>
@@ -202,10 +195,7 @@
         <div class="block-footer d-flex flex-wrap pb-4 justify-content-around">
             <ul>
                 <li>
-                    <a href="">Acerca</a>
-                </li>
-                <li>
-                    <a href="">Refugios</a>
+                    <a href="about.html">Acerca</a>
                 </li>
                 <li>
                     <a href="">Condiciones de uso</a>
@@ -216,28 +206,22 @@
             </ul>
             <ul>
                 <li>
-                    <a href="">Partners</a>
+                    <a href="">paw.chontli@gmail.com</a>
                 </li>
                 <li>
-                    <a href="">Soporte</a>
-                </li>
-                <li>
-                    <a href="">Mapa del sitio</a>
+                    <a href="">55-12-32-34-14</a>
                 </li>
             </ul>
         </div>
 
         <div class="icons-footer d-flex justify-content-evenly">
-            <a href="" role="button">
+            <a href="https://www.facebook.com/Pawchontli-100149705588791" role="button">
                 <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
             </a>
-            <a href="" role="button">
-                <img src="/assets/svg/twitter.svg" alt="" style="height: 2.5em; width: 2.5em;">
-            </a>
-            <a href="" role="button">
+            <a href="https://www.instagram.com/pawchontli/" role="button">
                 <img src="/assets/svg/instagram.svg" alt="" style="height: 2.5em; width: 2.5em;">
             </a>
-            <a href="">
+            <a href="https://github.com/xrlie/pawchontli_backend">
                 <img src="/assets/svg/git.svg" alt="" style="height: 3em; width: 3em;">
             </a>
         </div>
