--- a/updateUser.html
+++ b/updateUser.html
@@ -24,9 +24,6 @@
                 </a>
             </div>
             <div>
-                <a href="favouritePet.html">
-                    <img src="assets/svg/heart.svg" class="heart" alt="" style="width: 2em;">
-                </a>
                 <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
@@ -140,21 +137,11 @@
                     </div>
                     <br>
                     <div class="file-upload">
-                        <div class="image-upload-wrap">
-                            <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
-                            <div class="drag-text">
-                                <br>
-                                <img src="assets/svg/add.svg" alt="" style="height: 3em; width: 3em;">
-                                <h3 class="josefinsans-medium-chetwode-blue-14px">Añadir foto de perfil</h3>
-                            </div>
-                        </div>
-                        <div class="file-upload-content">
-                            <img class="file-upload-image" src="#" alt="your image" />
-                            <div class="image-title-wrap">
-                                <button type="button" onclick="removeUpload()" class="remove-image">Borrar <span
-                                        class="image-title">Tu foto</span></button>
-                            </div>
-                        </div>
+                        <label for="inputDescription"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Cambiar tu foto de perfil.
+                        </label>
+                        <input type="file" class="input-picture josefinsans-normal-chetwode-blue-16px" id="image"
+                            type="file" accept="image/*">
                     </div>
                     <div>
                         <div class="d-flex justify-content-center">
@@ -176,10 +163,7 @@
         <div class="block-footer d-flex flex-wrap pb-4 justify-content-around">
             <ul>
                 <li>
-                    <a href="">Acerca</a>
-                </li>
-                <li>
-                    <a href="">Refugios</a>
+                    <a href="about.html">Acerca</a>
                 </li>
                 <li>
                     <a href="">Condiciones de uso</a>
@@ -190,28 +174,22 @@
             </ul>
             <ul>
                 <li>
-                    <a href="">Partners</a>
+                    <a href="">paw.chontli@gmail.com</a>
                 </li>
                 <li>
-                    <a href="">Soporte</a>
-                </li>
-                <li>
-                    <a href="">Mapa del sitio</a>
+                    <a href="">55-12-32-34-14</a>
                 </li>
             </ul>
         </div>
 
         <div class="icons-footer d-flex justify-content-evenly">
-            <a href="" role="button">
+            <a href="https://www.facebook.com/Pawchontli-100149705588791" role="button">
                 <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
             </a>
-            <a href="" role="button">
-                <img src="/assets/svg/twitter.svg" alt="" style="height: 2.5em; width: 2.5em;">
-            </a>
-            <a href="" role="button">
+            <a href="https://www.instagram.com/pawchontli/" role="button">
                 <img src="/assets/svg/instagram.svg" alt="" style="height: 2.5em; width: 2.5em;">
             </a>
-            <a href="">
+            <a href="https://github.com/xrlie/pawchontli_backend">
                 <img src="/assets/svg/git.svg" alt="" style="height: 3em; width: 3em;">
             </a>
         </div>
@@ -225,7 +203,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
