--- a/profileShelter.html
+++ b/profileShelter.html
@@ -41,7 +41,7 @@
             </div>
             <div class="shelter-text rectangle-background">
                 <div class="detail-top pt-1">
-                    <img src="assets/img/shelterImage.jpg" alt="" class="shelter-image" style="width: 15em;">
+                    <img src="" alt="" class="shelter-image" style="width: 15em;">
                 </div>
                 <div class="info-shelter d-flex flex-column">
                     <h2 class="shelter-name josefinsans-normal-black-30px d-flex justify-content-center pb-3" ></h2>
@@ -58,7 +58,7 @@
                             </div>
                             <div class="web">
                                 <p class="josefinsans-chetwode-blue-18px">WEB</p>
-                                <a class="webaddress-shelter" href="" target="_blank">Link</a>
+                                <a class="webaddress-shelter" href="" target="_blank"></a>
                             </div>
                         </div>
                         <div class="secondary-info d-flex flex-wrap justify-content-center px-5">
