--- a/403.html
+++ b/403.html
@@ -19,8 +19,8 @@
 
     <main class="x403">
         <div class="bg">
-            <h1 class="number valign-text-middle josefinsans-bold-porsche-150px">403</h1>
-            <div class="text-4 valign-text-middle josefinsans-bold-porsche-55px">No lograrás pasar.</div>
+            <h1 class="number josefinsans-bold-porsche-150px">403</h1>
+            <div class="text-4 josefinsans-bold-porsche-55px">Prohibido el paso</div>
         </div>
     </main>
 
