--- a/detailPet.html
+++ b/detailPet.html
@@ -61,12 +61,12 @@
     </nav>
     
     <main>
-        <div class="detail-pet">
-            <div class="image-pet d-flex justify-content-center align-items-center flex-column pt-1">
+        <div class="detail-pet d-lg-inline-flex">
+            <div class="image-pet d-flex justify-content-center align-items-center flex-column pt-1 col-lg-7">
                 <img onclick="goBack()" src="assets/svg/arrowleft.svg" alt="" class="arrow-left" style="width: 2.5em;">
                 <img src="assets/img/pexels-rk-jajoria-1189673.jpg" alt="" class="container-fluid pet-image">
             </div>
-            <div class="pet-text rectangle-background">
+            <div class="pet-text rectangle-background col-lg-5">
                 <div class="info-pet">
                     <h2 class="pet-name josefinsans-normal-black-30px d-flex justify-content-between">Gnocchi</h2>
                     <div class="d-flex flex-column">
