--- a/searchPet.html
+++ b/searchPet.html
@@ -52,7 +52,8 @@
                 </a>
             </li>
             <li>
-                <a href="index.html">
+                <!-- href="index.html" -->
+                <a id='log-out'>
                     Cerrar sesión
                 </a>
             </li>
