--- a/searchDog.html
+++ b/searchDog.html
@@ -52,7 +52,7 @@
                 </a>
             </li>
             <li>
-                <a href="index.html">
+                <a id="log-out" href="index.html">
                     Cerrar sesión
                 </a>
             </li>
